--- a/src/components/header/header.less
+++ b/src/components/header/header.less
@@ -99,7 +99,9 @@
 
     to {
       height: 0;
+      display: none;
       opacity: 0;
+      z-index: -1;
     }
   }
 
@@ -122,6 +124,33 @@
     .init {
       display: none;
     }
+
+    // 点击按钮 菜单打开后
+    .open {
+      width: 100vw;
+      background: rgba(0, 0, 0, 0.8);
+      position: absolute;
+      top: 80px;
+      left: 0;
+      z-index: 100;
+      animation: slideDown 0.6s ease-out forwards;
+
+      ul li {
+        width: 100vw;
+        border-bottom: 1px dotted rgba(255, 255, 255, .6);
+        line-height: 46px;
+        text-align: left;
+        font-size: 16px;
+        padding: 0 5%;
+        color: #fff;
+
+        a {
+          font-size: 16px;
+          color: #fff;
+        }
+      }
+    }
+
 
     .closed {
       width: 100vw;
@@ -147,33 +176,6 @@
         }
       }
     }
-
-    // 点击按钮 菜单打开后
-    .open {
-      width: 100vw;
-      background: rgba(0, 0, 0, 0.7);
-      position: absolute;
-      top: 80px;
-      left: 0;
-      z-index: 100;
-      animation: slideDown 0.6s ease-out forwards;
-
-      ul li {
-        width: 100vw;
-        border-bottom: 1px dotted rgba(0, 0, 0, .3);
-        line-height: 46px;
-        text-align: left;
-        font-size: 16px;
-        padding: 0 5%;
-        color: #fff;
-
-        a {
-          font-size: 16px;
-          color: #fff;
-        }
-      }
-    }
-
 
     .phoneIcon {
       display: block;
