--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -1,52 +1,121 @@
-.login {
-  // 垂直居中(无固定高度的)
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  border-radius: 5px;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  display: flex;
-  border: 1px solid var(--text-color-lightest);
-  box-shadow: 0 0 3px 3px rgba(192, 192, 192, .6);
-  align-items: center;
-  justify-content: center;
-  height: 60vh;
+@media(min-width:992px) {
+  .login {
+    // 垂直居中(无固定高度的)
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border-radius: 5px;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    display: flex;
+    border: 1px solid var(--text-color-lightest);
+    box-shadow: 0 0 3px 3px rgba(192, 192, 192, .6);
+    align-items: center;
+    justify-content: center;
+    height: 60vh;
+  
+    .login-left {
+      width: 50%;
+      height: 100%;
+      padding: 60px 0 30px 30px;
+      background: #47566A url(../../assets/images/login-bgimg.png) no-repeat;
+  
+      h1 {
+        font-size: 30px;
+        font-weight: 700;
+        margin-bottom: 20px;
+      }
+  
+      .info {
+        color: #bbb;
+        font-size: 18px;
+        margin-top: 40px;
+        line-height: 2;
+      }
+    }
+  
+    .login-right {
+      width: 50%;
+      height: 100%;
+      padding: 60px 30px 30px 30px;
+  
+      .form-title {
+        padding-bottom: 2rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+  
+        strong {
+          font-size: 1.8rem;
+        }
+  
+        a {
+          color: #47566A;
+  
+          &:hover {
+            color: #f01;
+          }
+        }
+      }
+  
+      .submitBtn {
+        width: 100%;
+        background-color: #ccc;
+        outline: none;
+        border: none;
+  
+        &:hover {
+          background-color: #FE7300;
+        }
+      }
+    }
+  }
+}
+
+
+@media(max-width:991px) {
+  .login {
+    width: 100%;
+    margin: 2px auto;
+    border-radius: 5px;
+    border: 1px solid var(--text-color-lightest);
+    box-shadow: 0 0 1px 1px rgba(192, 192, 192, .6);
+  }
 
   .login-left {
-    width: 50%;
-    height: 100%;
-    padding: 60px 0 30px 30px;
+    display: block;
+    width: 100%;
+    padding: 20px;
     background: #47566A url(../../assets/images/login-bgimg.png) no-repeat;
 
     h1 {
       font-size: 30px;
       font-weight: 700;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
 
     .info {
       color: #bbb;
       font-size: 18px;
-      margin-top: 40px;
+      margin-top: 10px;
       line-height: 2;
     }
   }
 
   .login-right {
-    width: 50%;
+    width: 100%;
     height: 100%;
-    padding: 60px 30px 30px 30px;
+    padding: 0 10px;
 
     .form-title {
-      padding-bottom: 2rem;
+      padding: 10px;
       display: flex;
       justify-content: space-between;
       align-items: center;
 
       strong {
-        font-size: 1.8rem;
+        font-size: 28px;
       }
 
       a {
