--- a/src/components/footer/footer.less
+++ b/src/components/footer/footer.less
@@ -32,20 +32,25 @@
   .container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
+    // justify-content: center;
+    align-items: flex-start;
     background-color: #fff;
 
     section {
       width: 33.33%;
       box-sizing: border-box;
-      padding: 20px 30px;
+      padding: 10px 30px;
       transition: 0.4s ease;
       position: relative;
 
       h4 {
-        font-size: 20px;
+        font-size: 26px;
         font-weight: bold;
+        margin-bottom: 8px;
+      }
+      .footer-text {
+        font-size: 14px;
+        line-height: 1.8;
       }
 
       &:hover {
@@ -65,8 +70,8 @@
 @media(max-width: 991px) {
   .footer-wrapper {
     width: 100%;
-    padding: 10px;
-    margin: 10px auto;
+    padding: 0 10px 10px;
+    margin: 0 auto;
 
     .title {
       margin: 0 auto;
@@ -80,7 +85,15 @@
         padding: 10px 0;
         transition: 0.4s ease;
         position: relative;
-
+        h4 {
+          font-size: 26px;
+          font-weight: bold;
+          margin-bottom: 8px;
+        }
+        .footer-text {
+          font-size: 14px;
+          line-height: 1.8;
+        }
         &:hover {
           transform: translateY(-10px) scale(1.02);
           box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.5);
@@ -89,7 +102,7 @@
 
       .copyright {
         margin: 20px auto 0;
-
+        background-color: #eee;
       }
     }
   }
