--- a/src/components/header/header.less
+++ b/src/components/header/header.less
@@ -11,7 +11,6 @@
     box-shadow: 0 0 3px 3px #ccc;
 
     .logo {
-      // width: 26%;
       font-size: 32px;
       font-weight: 700;
       color: var(--text-font-color);
@@ -84,7 +83,7 @@
     }
 
     to {
-      height: 30vh;
+      height: 36%;
       padding-top: 0px;
       opacity: 1;
     }
@@ -92,7 +91,7 @@
 
   @keyframes slideUp {
     from {
-      height: 30vh;
+      height: 36%;
       padding-top: 0px;
       opacity: 1;
     }
@@ -143,10 +142,12 @@
         font-size: 16px;
         padding: 0 5%;
         color: #fff;
-
+        font-weight: bold;
         a {
           font-size: 16px;
           color: #fff;
+          display: inline-block;
+          width: 100%;
         }
       }
     }
@@ -185,8 +186,6 @@
       cursor: pointer;
       background-size: 100% auto;
     }
-
-
 
     .userinfo {
       display: none;
