--- a/src/components/image-section/section.less
+++ b/src/components/image-section/section.less
@@ -1,86 +1,89 @@
-.content-wrapper {
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  /* 主轴(列)居中*/
-  justify-content: center;
-  margin: 50px auto 0;
-
-  .title {
-    height: 60px;
-    line-height: 60px;
-    font-size: 34px;
-    font-weight: bold;
-    color: var(--text-color-darker);
-    position: relative;
-    margin: 0 auto 60px;
-
-    // 下面的红线
-    &::after {
-      content: '';
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: -6px;
-      width: 80%;
-      height: 4px;
-      background-color: var(--primary-color);
-      margin: 0 auto;
-    }
-  }
-
-  .section-wrapper {
+@media(min-width:992px) {
+  .content-wrapper {
+    width: 80%;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: #fff;
-
-    .section-item {
-      box-sizing: border-box;
-      width: 25%;
-      padding: 20px 30px;
-      // box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.2);
-      transition: 0.4s ease;
+    flex-direction: column;
+    /* 主轴(列)居中*/
+    justify-content: center;
+    margin: 50px auto 0;
+  
+    .title {
+      height: 60px;
+      line-height: 60px;
+      font-size: 34px;
+      font-weight: bold;
+      color: var(--text-color-darker);
       position: relative;
-      // -webkit-animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-      // animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-
-      &:hover {
-        transform: translateY(-10px) scale(1.02);
-        box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.5);
-      }
-
-      // 图片的遮罩层
-      .backdrop {
-        background: var(--backdrop-color);
-        z-index: 60;
+      margin: 0 auto 60px;
+  
+      // 下面的红线
+      &::after {
+        content: '';
         position: absolute;
-        width: 100%;
-        height: 100%;
         left: 0;
-        top: 0;
-        opacity: 0.1;
+        right: 0;
+        bottom: -6px;
+        width: 80%;
+        height: 4px;
+        background-color: var(--primary-color);
+        margin: 0 auto;
       }
-
-      img {
-        width: 100%;
-      }
-
-      // 图片下的文字
-      .section-item-info {
-        color: rgba(0, 0, 0, 0.8);
-        text-align: center;
-        margin: 0;
-        padding-top: 20px;
-        font-weight: 600;
+    }
+  
+    .section-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      align-items: center;
+      background-color: #fff;
+  
+      .section-item {
+        box-sizing: border-box;
+        width: 25%;
+        padding: 20px 30px;
+        // box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.2);
+        transition: 0.4s ease;
+        position: relative;
+        // -webkit-animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        // animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  
+        &:hover {
+          transform: translateY(-10px) scale(1.02);
+          box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.5);
+        }
+  
+        // 图片的遮罩层
+        .backdrop {
+          background: var(--backdrop-color);
+          z-index: 60;
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+          opacity: 0.1;
+        }
+  
+        img {
+          width: 100%;
+        }
+  
+        // 图片下的文字
+        .section-item-info {
+          color: rgba(0, 0, 0, 0.8);
+          text-align: center;
+          margin: 0;
+          padding-top: 20px;
+          font-weight: 600;
+        }
       }
     }
   }
 }
 
 
-@media(max-width:992px) {
+
+@media(max-width:991px) {
   .content-wrapper {
     width: 100%;
     display: flex;
