--- a/src/components/image-section/section.less
+++ b/src/components/image-section/section.less
@@ -1,3 +1,4 @@
+// PC端
 @media(min-width:992px) {
   .content-wrapper {
     width: 80%;
@@ -74,7 +75,7 @@
           text-align: center;
           margin: 0;
           padding-top: 20px;
-          font-weight: 600;
+          font-weight: normal;
         }
       }
     }
@@ -144,7 +145,8 @@
           text-align: center;
           margin: 0;
           padding-top: 20px;
-          font-weight: 600;
+          font-weight: normal;
+          font-size: 14px;
         }
       }
     }
