--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -75,7 +75,7 @@
 }
 
 
-
+// 手机端
 @media(max-width:991px) {
   .crew {
     width: 100%;
@@ -140,7 +140,7 @@
               font-size: 20px;
             }
             .crew-job-title {
-              margin-top: 10px;
+              margin-top: 20px;
             }
           }
         }
@@ -148,8 +148,9 @@
         .crew-job-desc {
           padding-top: 20px;
           color: rgba(0, 0, 0, 0.8);
-          font-weight: 400;
+          font-weight: normal;
           margin-bottom: 10px;
+          line-height: 1.6;
         }
       }
     }
