--- a/src/pages/page-template/page-template.less
+++ b/src/pages/page-template/page-template.less
@@ -58,10 +58,11 @@
   .ant-tabs-nav {
     margin-top: 0!important;
     margin-bottom: 4px!important;
+    width: 100%;   // 加上会滚动隐藏的tab
     position: fixed!important;
     z-index: 90!important;
     background-color: #fff;
-    // box-shadow: 0 0 1px 1px #ccc;
+    box-shadow: 0 0 3px 3px #ccc;
   }
   .ant-tabs-content-holder {
     margin-top: 40px!important;
