--- a/src/components/image-detail/image-detail.less
+++ b/src/components/image-detail/image-detail.less
@@ -22,6 +22,7 @@
   .detail-wrapper {
     width: 100%;
     h2 {
+      color: var(--text-color-lightest);
       text-align: center;
       font-size: 20px;
       height: 40px;
