--- a/src/pages/main/main.less
+++ b/src/pages/main/main.less
@@ -1,4 +1,7 @@
-.content {
-  min-height: 70vh;
-  margin-top: 80px;
+.container {
+  background-color: var(--primary-bgc);
+  .content {
+    min-height: 70vh;
+    margin-top: 80px;
+  }
 }
