--- a/src/components/image-section/section.less
+++ b/src/components/image-section/section.less
@@ -13,7 +13,7 @@
       line-height: 60px;
       font-size: 34px;
       font-weight: bold;
-      color: var(--text-color-darker);
+      color: var(--text-color-lightest);
       position: relative;
       margin: 0 auto 60px;
   
@@ -36,7 +36,7 @@
       flex-wrap: wrap;
       justify-content: flex-start;
       align-items: center;
-      background-color: #fff;
+      background-color: var(--primary-bgc);
   
       .section-item {
         box-sizing: border-box;
@@ -50,20 +50,20 @@
   
         &:hover {
           transform: translateY(-10px) scale(1.02);
-          box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 0px 18px rgba(255,255,255, 0.5);
         }
   
         // 图片的遮罩层
-        .backdrop {
-          background: var(--backdrop-color);
-          z-index: 60;
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          left: 0;
-          top: 0;
-          opacity: 0.1;
-        }
+        // .backdrop {
+        //   background: var(--backdrop-color);
+        //   z-index: 60;
+        //   position: absolute;
+        //   width: 100%;
+        //   height: 100%;
+        //   left: 0;
+        //   top: 0;
+        //   opacity: 0.1;
+        // }
   
         img {
           width: 100%;
@@ -71,7 +71,7 @@
   
         // 图片下的文字
         .section-item-info {
-          color: rgba(0, 0, 0, 0.8);
+          color: var(--text-color-lightest);
           text-align: center;
           margin: 0;
           padding-top: 20px;
@@ -98,7 +98,7 @@
       line-height: 30px;
       font-size: 30px;
       font-weight: bold;
-      color: var(--text-color-darker);
+      color: var(--text-color-lightest);
       position: relative;
       margin: 0 auto 30px;
 
@@ -121,7 +121,7 @@
       flex-wrap: wrap;
       justify-content: flex-start;
       align-items: center;
-      background-color: #fff;
+      background-color: var(--primary-bgc);
 
       .section-item {
         box-sizing: border-box;
@@ -132,7 +132,7 @@
 
         &:hover {
           transform: translateY(-10px) scale(1.02);
-          box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 0px 18px rgba(255,255,255, 0.5);
         }
 
         img {
@@ -141,7 +141,7 @@
 
         // 图片下的文字
         .section-item-info {
-          color: rgba(0, 0, 0, 0.8);
+          color: var(--text-color-lightest);
           text-align: center;
           margin: 0;
           padding-top: 20px;
