--- a/src/components/swiper/swiper.less
+++ b/src/components/swiper/swiper.less
@@ -1,78 +1,61 @@
-// 公共样式
-// 未选中的点点设置
-.swiper-pagination-bullet {
-  display: inline-block;
-  background-color: #fff;
-  width: 20px;
-  height: 20px;
-  line-height: 20px;
-  border-radius: 50%;
-  opacity: .7;
-}
-
-// 当前选中的点点的设置
-.swiper-pagination-bullet-active {
-  background-color: #f01;
-  opacity: 1;
-}
-
-.swiper-container {
-  width: 80vw;
-  background-color: #fff;
-  margin-top: 3px;
-
-  .swiper-wrapper {
-    // position: relative;
-    .slider-odd {
-      position: absolute;
-      top: 6vh;
-      left: 0;
-      width: 30vw;
-      height: 50px;
-      line-height: 50px;
-      text-align: left;
-      padding-left: 20px;
-      font-size: 30px;
-      background-color: rgba(255, 255, 255, 0.6);
-      color: #000;
-      font-weight: bold;
-      animation: slideInDown;
-      animation-duration: 2s;
-    }
-
-    .slider-even {
-      position: absolute;
-      top: 6vh;
-      left: 0;
-      width: 30vw;
-      height: 50px;
-      line-height: 50px;
-      text-align: left;
-      padding-left: 20px;
-      font-size: 30px;
-      background-color: rgba(255, 255, 255, 0.6);
-      color: #000;
-      font-weight: bold;
-      animation: fadeInRight;
-      animation-duration: 2s;
-    }
-
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-}
 
 // PC端
-@media(min-width: 992px) {}
+@media(min-width: 992px) {
+  .swiper-container {
+    width: 60vw;
+    background-color: var(--primary-bgc);
+    margin-top: 10px;
+  
+    .swiper-wrapper {
+      // position: relative;
+      .slider-odd {
+        position: absolute;
+        top: 6vh;
+        left: 0;
+        width: 30vw;
+        height: 50px;
+        line-height: 50px;
+        text-align: left;
+        padding-left: 20px;
+        font-size: 30px;
+        background-color: rgba(0, 0, 0, 0.5);
+        color: #fff;
+        font-weight: bold;
+        animation: slideInDown;
+        animation-duration: 2s;
+      }
+  
+      .slider-even {
+        position: absolute;
+        top: 6vh;
+        left: 0;
+        width: 30vw;
+        height: 50px;
+        line-height: 50px;
+        text-align: left;
+        padding-left: 20px;
+        font-size: 30px;
+        background-color: rgba(0, 0, 0, 0.5);
+        color: #fff;
+        font-weight: bold;
+        animation: fadeInRight;
+        animation-duration: 2s;
+      }
+  
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  
+  }
+}
 
 @media(max-width: 991px) {
   .swiper-container {
     width: 100vw;
-    height: 30vh;
-
+    background-color: var(--primary-bgc);
+    margin-top: 10px;
     .swiper-wrapper {
       position: relative;
       
@@ -109,4 +92,23 @@
       }
     }
   }
+}
+
+
+// 公共样式
+// 未选中的点点设置
+.swiper-pagination-bullet {
+  display: inline-block;
+  background-color: #fff;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  border-radius: 50%;
+  opacity: .7;
+}
+
+// 当前选中的点点的设置
+.swiper-pagination-bullet-active {
+  background-color: #f01;
+  opacity: 1;
 }
