--- a/src/pages/page-template/page-template.less
+++ b/src/pages/page-template/page-template.less
@@ -9,6 +9,7 @@
       left: 0;
       font-size: 26px;
       margin: 10px 0;
+      color: var(--text-color-lightest);
     }
     
     .card-item {
