增加后台管理功能 调整前端代码与样式

--- a/src/components/header/header.less
+++ b/src/components/header/header.less
@@ -13,17 +13,19 @@
     justify-content: space-between;
     // background-color: #fff;
     box-shadow: 0 0 3px 3px #ccc;
-    background-color: #333a42;
+    background-color: #fff;
+    color: #000;
 
     .logo {
       font-size: 32px;
       font-weight: 700;
-      // color: var(--text-font-color);
-      color: #fff;
       cursor: pointer;
       user-select: none;
+      margin-right: 50px;
     }
-
+    .mobile-menu {
+      display: none;
+    }
     nav {
       width: 60%;
       display: flex;
@@ -132,15 +134,17 @@
     align-items: center;
     justify-content: space-between;
     box-shadow: 0 0 3px 3px #ccc;
-    background-color: #333a42;
+    background-color: #fff;
     .logo {
       font-size: 32px;
       font-weight: 700;
       // color: var(--text-font-color);
-      color: #fff;
+      color: #000;
       cursor: pointer;
     }
-
+    .pc-menu {
+      display: none;
+    }
     .init {
       display: none;
     }
@@ -203,7 +207,7 @@
     // 使用iconfont
     .phoneIcon {
       svg {
-        color: #fff;
+        color: #000;
         font-size: 30px;
       }
     }
