--- a/src/components/swiper/swiper.less
+++ b/src/components/swiper/swiper.less
@@ -90,6 +90,9 @@
         animation: fadeInRight;
         animation-duration: 2s;
       }
+      img {
+        height: 200px;
+      }
     }
   }
 }
