--- a/src/index.less
+++ b/src/index.less
@@ -20,7 +20,14 @@ ol {
 body {
   background-color: #fff;
   font-size: 16px;
+  height: 100%;
 }
+#root, .ant-layout {
+  height: 100%;
+}
+// .ant-layout {
+//   height: 100%;
+// }
 
 :root {
   --primary-color: #ff434f;
