--- a/src/components/image-detail/image-detail.less
+++ b/src/components/image-detail/image-detail.less
@@ -4,7 +4,9 @@
       text-align: center;
       font-size: 30px;
       font-weight: 700;
-      margin: 20px auto;
+      margin: 0 auto;
+      padding-top: 20px;
+      color: var(--text-color-lightest);
     }
     .image-container {
       width: 80%;
