增加内容管理 菜单下的标签管理 以及一些优化内容

--- a/src/pages/admin/left-nav/left-nav.less
+++ b/src/pages/admin/left-nav/left-nav.less
@@ -1,46 +1,33 @@
 .left-nav {
-  background-color: #fff;
+  background-color: #000;
+  // .ant-menu-item {
+  //   font-size: 16px;
+  //   font-weight: normal;
+  //   padding-left: 20px!important;
+  // }
+  
+  
   // .ant-layout-sider {
   //   background-color: red;
   // }
-  .ant-layout-sider-children > ul {
-    background-color: #fff;
-    li {
-      font-size: 16px;
-      font-weight: normal;
-    }
+  // .ant-layout-sider-children > ul {
+  //   background-color: #000;
+  //   li {
+  //     font-size: 16px;
+  //     font-weight: normal;
+  //     background-color: #000;
+  //   }
     
-  }
-  .admin-layout-background {
-    background-color: #fff;
-  }
+  // }
+  // .admin-layout-background {
+  //   background-color: #fff;
+  // }
 
-  .menuIcon {
-    margin-right: 6px!important;
-    svg {
-      // font-size: 20px;
-    }
-  }
+  // .menuIcon {
+  //   margin-right: 6px!important;
+  //   svg {
+  //     // font-size: 20px;
+  //     color: #fff!important;
+  //   }
+  // }
 }
-
-// .left-nav {
-//   background-color:red;
-//   color: red;
-
-//   .site-layout-background {
-
-//     .trigger {
-//       text-align: left;
-//       margin-left: 16px;
-//       font-size: 20px;
-
-//       :hover {
-//         cursor: pointer;
-//       }
-//     }
-//   }
-// }
-
-// .ant-menu {
-//   background-color: #000;
-// }
