--- a/src/components/header/header-menu.less
+++ b/src/components/header/header-menu.less
@@ -1,12 +1,14 @@
+.header-menu {
+  .ant-menu-horizontal {
+    border-bottom: 0!important
+  }
+  .ant-menu {
+    font-size: 16px!important;
+  }
+  
+  .ant-menu-item {
+    font-size: 20px;
+    font-weight: bold;
+  }
+}
 
-.ant-menu-horizontal {
-  border-bottom: 0!important
-}
-.ant-menu {
-  font-size: 16px!important;
-}
-
-.ant-menu-item {
-  font-size: 20px;
-  font-weight: bold;
-}
