--- a/src/components/header/header.less
+++ b/src/components/header/header.less
@@ -86,6 +86,15 @@
         }
       }
     }
+    .ant-dropdown-link {
+      font-size: 20px;
+      color: #000;
+      cursor: pointer;
+      user-select: none;
+      &:hover {
+        color: red;
+      }
+    }
 
     .phoneIcon {
       display: none;
