--- a/src/pages/admin/header/header.less
+++ b/src/pages/admin/header/header.less
@@ -22,6 +22,19 @@
   }
 
   .admin-header-right {
-    // background-color: rgba(0, 0, 0, 0.35);
+    padding-right: 20px;
+    .ant-dropdown-link {
+      font-size: 20px;
+      color: #000;
+      cursor: pointer;
+      user-select: none;
+      &:hover {
+        color: red;
+      }
+    }
   }
+}
+
+.ant-select-arrow {
+  display: none!important;
 }
