--- a/src/pages/admin/index/admin.less
+++ b/src/pages/admin/index/admin.less
@@ -13,3 +13,12 @@
     background-color: #fff;
   }
 }
+
+
+// 后台管理 antd 源码样式修改
+.ant-card-body {
+  // padding: 0 4px!important;
+}
+.ant-form-item {
+  // margin-bottom: 20px!important;
+}
