--- a/src/components/footer/footer.less
+++ b/src/components/footer/footer.less
@@ -66,7 +66,8 @@
     .copyright {
       margin: 20px auto 0;
       color: var(--text-color-lightest);
-      padding-bottom: 20px;
+      padding-bottom: 6px;
+      font-size: 10px;
     }
   }
 }
@@ -105,9 +106,10 @@
         }
       }
 
-      // .copyright {
-      //   margin: 20px auto 0;
-      // }
+      .copyright {
+        // margin: 20px auto 0;
+        font-size: 10px;
+      }
     }
   }
 
