微调整样式

--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -60,7 +60,7 @@
         // 姓名
         .crew-name {
           display: block;
-          margin: 20px 0;
+          margin: 20px 0 14px;
           font-size: 20px;
           color: var(--text-color-lightest);
         }
@@ -69,15 +69,17 @@
           padding: 0;
           font-weight: 500;
           color: var(--text-color-lightest);
-          margin-bottom: 10px;
+          margin-bottom: 14px;
+          font-size: 16px;
         }
   
         // 职位描述
         .crew-job-desc {
-          color: rgba(0, 0, 0, 0.6);
           font-weight: 400;
           margin-bottom: 10px;
           color: var(--text-color-lightest);
+          line-height: 1.8;
+          font-size: 10px;
         }
       }
     }
